Adding Number Format and Not Found Exception